Closed
Bug 598942
Opened 14 years ago
Closed 14 years ago
Yellow triangle appearing in the Windows tray instead of new mail icon
Categories
(MailNews Core :: Backend, defect)
Tracking
(Not tracked)
RESOLVED
FIXED
People
(Reporter: u382332, Assigned: neil)
References
Details
Attachments
(2 files, 3 obsolete files)
7.02 KB,
patch
|
neil
:
review+
standard8
:
superreview+
|
Details | Diff | Splinter Review |
1.71 KB,
patch
|
Bienvenu
:
review+
Bienvenu
:
superreview+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (Windows NT 5.1; rv:2.0b7pre) Gecko/20100923 Firefox/4.0b7pre
Build Identifier:
A yellow triangle with exclamation point is appearing in the Windows tray instead of new mail icon.
Mozilla/5.0 (Windows NT 5.1; rv:2.0b7pre) Gecko/20100923 Thunderbird/3.3a1pre
Screenshot: http://img834.imageshack.us/img834/8496/tbirdnewmessage.png
Reproducible: Always
Quick analysis of the new libxul-based trunk builds shows that the new-mail
icon is no longer included into thunderbird.exe as application icon, hence not available to be shown on the task bar.
Same behavior observed with Mozilla/5.0 (Windows NT 5.1; rv:2.0b7pre) Gecko/20100923 SeaMonkey/2.1b1pre, I'll leave this with Thunderbird though
given that the processes were similar but separate for both applications.
Updated•14 years ago
|
Severity: normal → trivial
Comment 3•14 years ago
|
||
Problem still there with Seamonkey 20101008 SeaMonkey/2.1b2pre on all machines it is running (i.e. two running nightly SM builds) with Win7 64 Bit.
While I agree with Wayne that this is technically of "trivial" severity, it would be rather embarrassing to release a Thunderbird based on Gecko 2.0 with a broken new-mail icon. ;-)
Consequently, I'm nominating this to block 3.next.
Flags: blocking-thunderbird-next?
@KaiRo: Per comment #2, do you want a separate bug for SeaMonkey on the broken icon or shall we morph this one to a common MailNews bug?
Assuming that TB 3.2 will be released from comm-1.9.2 (without libxul), this should be more urgent for SM 2.1 than TB 3.next.
Assignee | ||
Comment 6•14 years ago
|
||
And the other issue is that nsMessengerWinIntegration is looking for it in mail.dll, which doesn't exist in fat libxul builds.
It seems more complicated than that, judging from the nested #ifdefs, unless the environment variables are set to something which is not accurate (I am wondering how this worked on static builds anyway, what's the NULL module?):
> 317 #ifdef MOZ_STATIC_BUILD
> 318 #define MAIL_DLL_NAME NULL
> 319 #else
> 320 #ifdef MOZ_STATIC_MAIL_BUILD
> 321 #define MAIL_DLL_NAME "mail.dll"
> 322 #else
> 323 #define MAIL_DLL_NAME "msgbase.dll"
> 324 #endif
> 325 #endif
> 326
> 327 void nsMessengerWinIntegration::InitializeBiffStatusIcon()
> 328 {
> 329 // initialize our biff status bar icon
> 330 Create();
> 331
> 332 sBiffIconData.hWnd = (HWND) msgWindow;
> 333 sBiffIconData.hIcon = ::LoadIcon( ::GetModuleHandle( MAIL_DLL_NAME ), MAKEINTRESOURCE(IDI_MAILBIFF) );
> 334
> 335 mBiffIconInitialized = PR_TRUE;
> 336 }
Ok, never mind. I see -DMOZ_ENABLE_LIBXUL=1 -DMOZ_STATIC_MAIL_BUILD=1 with the current nightly builds, so that's explaining why mail.dll is expected.
Assignee | ||
Comment 9•14 years ago
|
||
Always embed the icon in the executable.
Comment 10•14 years ago
|
||
With the removal of what I had cited in comment #7, does this make the icon definitions in mailnews/build/mail.rc and mailnews/build/resource.h redundant?
Assignee | ||
Comment 11•14 years ago
|
||
(In reply to comment #10)
> With the removal of what I had cited in comment #7, does this make the icon
> definitions in mailnews/build/mail.rc and mailnews/build/resource.h redundant?
Good point, I should also remove those. (And those in mailnews/base/build too.)
Assignee | ||
Comment 12•14 years ago
|
||
Also removes obsolete resource scripts.
Attachment #487242 -
Attachment is obsolete: true
Attachment #487306 -
Flags: review?(bienvenu)
Attachment #487242 -
Flags: review?(bienvenu)
Updated•14 years ago
|
Component: OS Integration → Backend
Flags: blocking-thunderbird-next? → blocking-thunderbird-next+
Product: Thunderbird → MailNews Core
QA Contact: os-integration → backend
Updated•14 years ago
|
Attachment #487306 -
Flags: review?(bienvenu) → review+
Assignee | ||
Updated•14 years ago
|
Attachment #487306 -
Flags: superreview?(bugzilla)
Comment 13•14 years ago
|
||
This looks good, but what happened to removing the resource.h files?
Assignee | ||
Comment 14•14 years ago
|
||
I also missed mailnews/base/build/newmail.ico ...
Assignee | ||
Comment 15•14 years ago
|
||
Attachment #487306 -
Attachment is obsolete: true
Attachment #487592 -
Flags: superreview?(bugzilla)
Attachment #487592 -
Flags: review+
Attachment #487306 -
Flags: superreview?(bugzilla)
Comment 16•14 years ago
|
||
Comment on attachment 487592 [details] [diff] [review]
Remove more
I've not tested this, but it looks fine. Thanks. sr=Standard8.
Attachment #487592 -
Flags: superreview?(bugzilla) → superreview+
Assignee | ||
Comment 17•14 years ago
|
||
Pushed changeset b71a8499c3ec to comm-central.
Status: ASSIGNED → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
Reporter | ||
Comment 18•14 years ago
|
||
Verified fixed. Thanks.
Mozilla/5.0 (Windows NT 5.1; rv:2.0b8pre) Gecko/20101103 Thunderbird/3.3a1pre
Status: RESOLVED → VERIFIED
Comment 19•14 years ago
|
||
Same for Mozilla/5.0 (Windows NT 5.1; rv:2.0b8pre) Gecko/20101103 SeaMonkey/2.1b2pre, the new-mail icon is back.
Assignee | ||
Comment 20•14 years ago
|
||
Comment on attachment 487592 [details] [diff] [review]
Remove more
>-// Program icon.
>-IDI_APPLICATION ICON THUNDERBIRD_ICO
...
> // For some reason IDI_MAILBIFF needs to be larger than the value of IDI_APPLICATION for static builds
> #define IDI_MAILBIFF 101
> IDI_MAILBIFF ICON "../../mailnews/build/newmail.ico"
>
>+// Program icon.
> #define IDI_APPICON 100
> IDI_APPICON ICON THUNDERBIRD_ICO
I overlooked that we used to include the icon twice, so we don't show the icon correctly on modeless dialogs any more :-(
Assignee | ||
Comment 21•14 years ago
|
||
OK, so the reason we include the icon twice, is so that we can have it once with a low number (100) to make it appear as the default icon in Explorer, and once with a high number (32512) because the widget code mistakenly believes that this is the correct value to use for the application's own icon.
Assignee | ||
Comment 22•14 years ago
|
||
IDI_APPLICATION is 32512 in WinUser.h so I chose 32767 for IDI_MAILBIFF.
Attachment #488160 -
Flags: superreview?(bienvenu)
Attachment #488160 -
Flags: review?(bienvenu)
Comment 23•14 years ago
|
||
Comment on attachment 488160 [details] [diff] [review]
Renumbering
with this patch in TB, I see a nice big thunderbird icon in the new mail alert, but I don't see the new mail icon on the taskbar. And I see the old yellow triangle if I hit the little triangle on the taskbar that shows hidden icons. So I don't think this is working for TB. I didn't do a complete rebuild, but I didn't need to before...is there anything I can check for you to figure out the issue?
Attachment #488160 -
Flags: superreview?(bienvenu)
Attachment #488160 -
Flags: superreview-
Attachment #488160 -
Flags: review?(bienvenu)
Attachment #488160 -
Flags: review-
Assignee | ||
Comment 24•14 years ago
|
||
Whoops, missing hunk :-(
Attachment #488160 -
Attachment is obsolete: true
Attachment #488227 -
Flags: superreview?(bienvenu)
Attachment #488227 -
Flags: review?(bienvenu)
Comment 25•14 years ago
|
||
Comment on attachment 488227 [details] [diff] [review]
Renumbering
that works, thx!
Attachment #488227 -
Flags: superreview?(bienvenu)
Attachment #488227 -
Flags: superreview+
Attachment #488227 -
Flags: review?(bienvenu)
Attachment #488227 -
Flags: review+
Assignee | ||
Comment 26•14 years ago
|
||
Pushed changeset 6ea0e2c0f1ed to comm-central.
Status: REOPENED → RESOLVED
Closed: 14 years ago → 14 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•