Bug 598942 No new mail icon in fatlibxul builds r=bienvenu sr=Standard8